@@ -1,5 +1,9 @@
 2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>
 
+	* m4/fsusage.m4: Update to serial #22.
+
+2006-12-30  Pavel Tsekov  <ptsekov@gmx.net>
+
 	* m4/fsusage.m4: Update to serial #18.
 
 2006-12-28  Pavel Roskin  <proski@gnu.org>
